2008-11-26
	FLTK 0.10.2 was released
	
2008-11-23
	FLTK: Fix for possible crash with html command used in plain window mode. Fix for
	file widget for directory names with space characters.
	      
2008-11-16
	FLTK: Fix for invalid values returned by PEN command.

2008-10-26
	FLTK: Fixed a few problems with find and replace. Implemented Rename Word command.

2008-08-16
	* released windows version 0.10.1

2008-08-01
	* passing length < 0 to MID no longer causes stackdump

2008-07-17
	* refactor FLTK to allow opening of multiple editors

2008-07-05
	* cleanup ansi codes from output in dev_null driver. fixed logprint command
	* fixed "open for append"
	* added FLTK -n non-interactive flag (prevents the gui from being displayed)

2008-07-01
	* Implemented program restart option in FLTK

2008-06-28
	* Updated to build FLTK version using MingW under Cygwin (see below).

2008-06-26
	* Added build support for MingW under Cygwin. This is simpler than installing
	  Msys, simply install MingW to say c:\MinwG, then change your .bash_profile with:
	  export PATH=/c/MinGW/bin:$PATH
	  Then re-run configure (under cygwin bash) and a non-cygwin console version will
	  be produced which can run under cmd.exe, explorer.exe etc.

2008-06-20
	* Can now supply program arguments on FLTK version command line:
        sbasici -r t5.bas foo -or- sbasici t5.bas foo -or- ls | sbasic t5.bas --
	also: echo foo | sbasic foo.bas --

2008-06-06
	* Implemented the ability to declare a local variable and assign a
	  value to it on the same line, eg local foo = "foo"

2008-06-04
	* Fixed problem with trailing backslash in strings

2008-06-01
	* Add support for hash arrays (rainy day)

2008-05-26
	* Updated module building to use autotools
	* Fix regression with console build
	* Fix for expression if (foo.x)
	* UDS copy operations now always as by reference
	* Can now refer to UDS field within parenthesis
	* Updated FLTK online help
	* Fix support for composite expressions such as "ar.ch(0).foo"
