@@ -1,10 +1,14 @@
+2009-01-07
+	Updated FileWidget to allow relative paths for saveas. Updated to handle
+	readonly edit buffers. Fixed a few compiler warnings
+
 2008-11-26
 	FLTK 0.10.2 was released
-	
+
 2008-11-23
 	FLTK: Fix for possible crash with html command used in plain window mode. Fix for
 	file widget for directory names with space characters.
-	      
+
 2008-11-16
 	FLTK: Fix for invalid values returned by PEN command.
 
